Pass to Java 1.8, fix some minor issues