@@ -1,8 +1,5 @@
 package fr.xebia.xskillz;
 
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.base.Predicates;
 import com.google.common.base.Splitter;
 import org.neo4j.graphdb.GraphDatabaseService;
 
@@ -14,15 +11,12 @@ import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
-import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
-import static com.google.common.collect.FluentIterable.from;
-import static fr.xebia.xskillz.Database.withinTransaction;
-import static fr.xebia.xskillz.Labels.SKILL;
-import static fr.xebia.xskillz.Skills.fromNode;
+import static fr.xebia.xskillz.Database.*;
 
 @Path("/skill")
 @Singleton
@@ -38,14 +32,9 @@ public class SkillRepository {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     public Collection<Skill> skills() {
-        return withinTransaction(new Function<GraphDatabaseService, Collection<Skill>>() {
-            @Override
-            public Collection<Skill> apply(GraphDatabaseService graphDb) {
-                return from(graphDb.findNodesByLabelAndProperty(SKILL, null, null))
-                        .transform(fromNode)
-                        .toList();
-            }
-        }, databaseProvider);
+        return withinTransaction(
+                queryAll("MATCH (n:" + Labels.SKILL + ") return n", Skills.fromNode.compose(extractNodeFromColumn("n")))
+                , databaseProvider);
     }
 
     @POST
@@ -53,19 +42,18 @@ public class SkillRepository {
     @Produces(MediaType.APPLICATION_JSON)
     public Collection<Skill> search(String query) {
 
-        final List<Predicate<Skill>> predicates = new ArrayList<>();
-
         Iterator<String> iterator = Splitter.on(' ').trimResults().split(query).iterator();
+
+        Predicate<Skill> predicate = (skill) -> false;
 
         while (iterator.hasNext()) {
             final String searchItem = iterator.next();
-            predicates.add(Skill.searchForItem(searchItem));
+            predicate = predicate.or(Skill.searchForItem(searchItem));
         }
-        Predicate<Skill> skillPredicate = Predicates.or(predicates);
 
-        return from(skills())
-                .filter(skillPredicate)
-                .toList();
+        return skills().stream()
+                .filter(predicate)
+                .collect(Collectors.toList());
     }
 
 }
