@@ -1,8 +1,5 @@
 package fr.xebia.xskillz;
 
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
 import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.Node;
 
@@ -12,14 +9,14 @@ import javax.inject.Singleton;
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
 import java.util.Collection;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
-import static com.google.common.base.Functions.compose;
-import static com.google.common.base.Predicates.alwaysTrue;
 import static com.google.common.base.Strings.isNullOrEmpty;
-import static com.google.common.collect.FluentIterable.from;
 import static fr.xebia.xskillz.Database.*;
-import static fr.xebia.xskillz.Functions2.chain;
-import static fr.xebia.xskillz.Functions2.liftForOptions;
+import static fr.xebia.xskillz.Functions.liftForOptions;
 import static fr.xebia.xskillz.Responses.ok;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
@@ -37,23 +34,27 @@ public class XebianRepository {
 
     @GET
     @Produces(APPLICATION_JSON)
-    public Collection<Xebian> searchForXebiansBySkill(@QueryParam("q") final String query) {
-        final Predicate<Xebian> predicate;
+    public Collection<Xebian> searchForXebiansBySkill(@QueryParam("q") final String query, @QueryParam("email") String email) {
+        Predicate<Xebian> predicate;
 
-        if (isNullOrEmpty(query)) {
-            predicate = alwaysTrue();
+        if (isNullOrEmpty(email)) {
+            predicate = xebian -> true;
         } else {
-            predicate = Xebian.withSkill(query);
+            predicate = xebia -> xebia.getEmail().equals(email);
         }
 
-        return from(xebians()).filter(predicate).toList();
+        if (!isNullOrEmpty(query)) {
+            predicate = predicate.and(Xebian.withSkill(query));
+        }
+
+        return xebians().stream().filter(predicate).collect(Collectors.toList());
     }
 
     @POST
     @Produces(APPLICATION_JSON)
     public Response createAXebian(final String email) {
         Xebian xebian = withinTransaction(
-                chain(Xebians.create(email), Xebians.fromNode),
+                Xebians.create(email).andThen(Xebians.fromNode),
                 databaseProvider);
 
         return ok().apply(xebian);
@@ -64,9 +65,9 @@ public class XebianRepository {
     @Produces(APPLICATION_JSON)
     @Path("{id}")
     public Response findById(@PathParam("id") final long id) {
-        return withinTransaction(chain(Xebians.findById(id), liftForOptions(Xebians.fromNode)), databaseProvider)
-                .transform(Responses.ok())
-                .or(Response.status(NOT_FOUND).build());
+        return withinTransaction(Xebians.findById(id).andThen(liftForOptions(Xebians.fromNode)), databaseProvider)
+                .map(Responses.ok())
+                .orElse(Response.status(NOT_FOUND).build());
 
     }
 
@@ -81,24 +82,24 @@ public class XebianRepository {
                         Node skill = Skills.findOrCreate(skillName).apply(graphDb);
 
                         Function<Node, Xebian> addSkillAndGetXebian =
-                                chain(Skills.addKnown(skill), Xebians.fromNode);
+                                Skills.addKnown(skill).andThen(Xebians.fromNode);
 
                         Function<Optional<Node>, Optional<Xebian>> addSkillAndGetXebianIfPossible =
                                 liftForOptions(addSkillAndGetXebian);
 
                         Function<GraphDatabaseService, Optional<Xebian>> optionalXebianWithSkill =
-                                chain(Xebians.findById(id), addSkillAndGetXebianIfPossible);
+                                Xebians.findById(id).andThen(addSkillAndGetXebianIfPossible);
 
                         return optionalXebianWithSkill.apply(graphDb);
                     }
                 }, databaseProvider
-        ).transform(Responses.ok())
-                .or(Response.notModified().build());
+        ).map(Responses.ok())
+                .orElse(Response.notModified().build());
     }
 
     public Collection<Xebian> xebians() {
         return withinTransaction(
-                queryAll("MATCH (n:" + Labels.XEBIAN + ") return n", compose(Xebians.fromNode, extractNodeFromColumn("n")))
+                queryAll("MATCH (n:" + Labels.XEBIAN + ") return n", Xebians.fromNode.compose(extractNodeFromColumn("n")))
                 , databaseProvider);
     }
 
